bonjack-tools/bonjack-tools-backend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: bonjack-tools-backend
spec:
  ports:
    - port: 3001
      targetPort: 3001
  selector:
    app: bonjack-tools-backend
